--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,7 +2,7 @@
 %html{:xmlns => "http://www.w3.org/1999/xhtml"}
   %head
     %title
-      Documentação do sistema SALUS
+      AH DOC - Sistema de Documentação
     %meta{:"http-equiv" => "Content-Type", :content => "text/html; charset=UTF-8"}
     = stylesheet_link_tag :all, :style, :table
     = javascript_include_tag :defaults
@@ -15,10 +15,11 @@
           %div.logo
             %h1
               %span
-                Documentação
-              SALUS
+                AH
+              DOC
               %small
-                Sistema de saúde
+                %span
+                Sistema de Documentação
 
           %div.clr
 
