--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -27,7 +27,7 @@
             %div.menu
               = menu :id =>"mainMenu", :class=>"menu" do |m|
                 = m.users User.model_name.human, users_path
-                = m.groups Group.model_name.human, groups_path
+                = m.system System.model_name.human, systems_path
 
       %div.content
         %div.content_resize
