--- a/app/views/databases/index.html.haml
+++ b/app/views/databases/index.html.haml
@@ -17,6 +17,7 @@
       %td
         = edit_link_to resource
         = destroy_link_to resource
+        = link_to Table.model_name.human, database_tables_path(resource), :class => 'button'
 
 %br 
 
