exibindo link para cadastrar dos campos da tabela

--- a/app/views/tables/index.html.haml
+++ b/app/views/tables/index.html.haml
@@ -13,6 +13,7 @@
       %td
         = edit_link_to resource
         = destroy_link_to resource
+        = link_to Field.model_name.human, table_fields_path(resource)
 
 %br
 
