--- a/app/views/indices/index.html.haml
+++ b/app/views/indices/index.html.haml
@@ -1,9 +1,11 @@
 = list_title
 
-%table
+%table.records
   %tr
     %th
       = resource_class.human_attribute_name :name
+    %th
+      = resource_class.human_attribute_name :description
     %th
 
   - collection.each do |resource|
@@ -11,12 +13,12 @@
       %td
         = resource.name
       %td
+        = resource.description
+      %td
         = edit_link_to resource
         = destroy_link_to resource
-        = link_to Field.model_name.human, table_fields_path(resource)
-        = link_to Index.model_name.human, table_indices_path(resource)
 
 %br
 
-= new_link_to :female
+= new_link_to
 = up_link_to
