inserindo rota do constraint no table.

--- a/app/views/tables/index.html.haml
+++ b/app/views/tables/index.html.haml
@@ -15,6 +15,7 @@
         = destroy_link_to resource
         = link_to Field.model_name.human, table_fields_path(resource)
         = link_to Index.model_name.human, table_indices_path(resource)
+        = link_to Constraint.model_name.human, table_constraints_path(resource)
 
 %br
 
